[gd_scene load_steps=9 format=3 uid="uid://bcisqtexxogd"]

[ext_resource type="Script" path="res://Towers/mind_scorcher_tower.gd" id="1_g10ou"]
[ext_resource type="Texture2D" uid="uid://tg1qqpi86ncg" path="res://Sprites/apprentice_mage_tower.png" id="3_d6xco"]
[ext_resource type="Texture2D" uid="uid://p7av2u43jvh7" path="res://Sprites/mind_scorcher_mage.png" id="3_kipmc"]
[ext_resource type="Texture2D" uid="uid://b53p12nh682s2" path="res://Sprites/mind_scorcher_banner.png" id="4_5je2y"]
[ext_resource type="PackedScene" uid="uid://cpafvfljhg0um" path="res://UI/tower_ui.tscn" id="5_mv4pn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_umy21"]
radius = 75.0
height = 200.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hageb"]
radius = 15.0
height = 45.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4m01o"]
radius = 15.0
height = 45.0

[node name="MindScorcherTower" type="StaticBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_g10ou")
min_damage = 4
max_damage = 14
recharge_time = 0.5

[node name="ApprenticeMageTower" type="Sprite2D" parent="."]
position = Vector2(0, -2)
texture = ExtResource("3_d6xco")

[node name="FireMage" type="Sprite2D" parent="ApprenticeMageTower"]
position = Vector2(0, -36)
texture = ExtResource("3_kipmc")

[node name="ShotPoint" type="Marker2D" parent="."]
position = Vector2(0, -43)

[node name="Range" type="Area2D" parent="."]

[node name="RangeCollisison" type="CollisionShape2D" parent="Range"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_umy21")

[node name="Aim" type="Marker2D" parent="."]

[node name="ProjectileContainer" type="Node" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="FireBanner" type="Sprite2D" parent="."]
position = Vector2(0, 4)
texture = ExtResource("4_5je2y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_hageb")

[node name="MouseArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseArea2D"]
light_mask = 3
visibility_layer = 3
position = Vector2(0, 5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_4m01o")

[node name="TowerUI" parent="." instance=ExtResource("5_mv4pn")]

[connection signal="area_entered" from="Range" to="." method="_on_range_area_entered"]
[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
[connection signal="body_shape_exited" from="Range" to="." method="_on_range_body_shape_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="input_event" from="MouseArea2D" to="." method="_on_mouse_area_2d_input_event"]
[connection signal="gui_input" from="TowerUI" to="." method="_on_tower_ui_gui_input"]
[connection signal="mouse_exited" from="TowerUI" to="." method="_on_tower_ui_mouse_exited"]
[connection signal="pressed" from="TowerUI/DismantleButton" to="." method="_on_dismantle_button_pressed"]

[editable path="TowerUI"]
